--- a/win/NvapiFans/NvapiFans.vcxproj.filters
+++ b/win/NvapiFans/NvapiFans.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="nv.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cxxopts.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
