try this service thing

--- a/win/NvFansSvc/NvFansSvc.vcxproj.filters
+++ b/win/NvFansSvc/NvFansSvc.vcxproj.filters
@@ -15,8 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\NvapiFans\nvfansvc.cpp">
+    <ClCompile Include="nvfansvc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\NvapiFans\json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
