--- a/win/NvapiFans/NvapiFans.vcxproj.filters
+++ b/win/NvapiFans/NvapiFans.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="cxxopts.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
