--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CPP Linter
+name: NvapiFans Windows build
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -18,6 +18,7 @@ jobs:
     runs-on: windows-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - uses: actions/checkout@v1
     # Runs a single command using the runners shell
     - name: Setup MSBuild.exe
       uses: warrenbuckley/Setup-MSBuild@v1
