--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "gpu_config": {
         "target_temp_max_C": 65,
         "min_fanspeed_percent": 10,
-        "start_fan_temp_C": 45
+        "start_fan_temp_C": 45,
+        "speed_change_increments": 5
     }
 }
