--- a/win/NvapiFansSvc/NvapiFansSvc.vcxproj.filters
+++ b/win/NvapiFansSvc/NvapiFansSvc.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="NvapiFansSvc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Logger.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NvapiFansSvc.cpp">
