--- a/win/config.json
+++ b/win/config.json
@@ -1,6 +1,6 @@
 {
     "version": 1,
-    "log_level":  "quiet",
+    "log_level":  "error",
     "gpu_config": {
         "interval_s": 2,
         "min_temp_c": 40,
