--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Run make on module
-        working-directory: linux
+        working-directory: linux/asus_fc2
         run: make
      
   build-windows:
