--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     # Runs a single command using the runners shell
-    - name: Setup MSBuild.exe
-      uses: warrenbuckley/Setup-MSBuild@v1
+    - name: setup-msbuild
+      uses: microsoft/setup-msbuild@v1
     - name: MSBuild
       working-directory: win
       run: msbuild NvapiFans.sln
